# aoc2023

./: .envrc  .envrc-pwsh.ps1  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.config/: config.json5
.github/workflows/: ci.yml
crates/aoc2023-common/: Cargo.toml
src/: action.rs  app.rs  cli.rs  command.rs  config.rs  event.rs  fps_counter.rs  main.rs  message.rs  mode.rs  model.rs  subscriptions.rs  termination.rs  tui.rs  ui.rs  update.rs  utils.rs  view.rs
src/components/: fps.rs  home.rs  mod.rs
