[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
color-eyre = "0.6.2"
config = "0.13.4"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.29"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.150"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.24.0", features = ["serde", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
signal-hook = "0.3.17"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
