[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jo12bar/aoc2023"
authors = ["Johann M. Barnard <johann.b@telus.net>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }

[package]
name = "aoc2023"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
description = "My solutions to the Advent of Code 2023 challenges (and an overly-complicated TUI runner for them)."
license.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["better-panic", "human-panic", "signal-hook"]

[dependencies]
aoc2023-common.path = "./crates/aoc2023-common"
better-panic = "0.3.0"
clap = { version = "4.4.10", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
directories = "5.0.1"
futures = "0.3.29"
human-panic = "1.2.2"
lazy_static = "1.4.0"
libc = "0.2.150"
log = "0.4.20"
ratatui = { version = "0.25.0", features = ["serde", "macros"] }
serde.workspace = true
serde_json = "1.0.108"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "serde",
    "json",
    "ansi",
] }

[dev-dependencies]
pretty_assertions = "1.4.0"
